--- a/neo-todo-client/src-tauri/Cargo.toml
+++ b/neo-todo-client/src-tauri/Cargo.toml
@@ -17,6 +17,8 @@ tauri = { version = "1.3", features = ["http-all", "shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
+neo-todo = { path = '../../neo-todo' }
+
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
 # DO NOT REMOVE!!
